Fix table line spacing

--- a/doclet/src/main/resources/template/css/custom.css
+++ b/doclet/src/main/resources/template/css/custom.css
@@ -242,6 +242,7 @@ table {
     max-width: 100%;
     margin-bottom: 20px;
     margin-top: 20px;
+    line-height: 26px;
     clear: both;
 }
 
